Words about JSON

--- a/licensing.html
+++ b/licensing.html
@@ -37,7 +37,10 @@ no_title: true
     </div>
     <div class='col-md-9'>
       <p>
-      In addition, this site <a href='/blog/2015/01/19/linking-data/'>publishes data</a> about Raw Funk Maharishi <a href='/gigs'>gigs</a> as <a href='http://theodi.org/guides/what-open-data'>Open Data</a>. This data is made available under a <a href='http://creativecommons.org/licenses/by-sa/4.0/'>Creative Commons Attribution Share-alike license</a>
+        This site <a href='/blog/2015/01/19/linking-data/'>publishes data</a> about Raw Funk Maharishi <a href='/gigs'>gigs</a> as <a href='http://theodi.org/guides/what-open-data'>Open Data</a>. This data is made available under a <a href='http://creativecommons.org/licenses/by-sa/4.0/'>Creative Commons Attribution Share-alike license</a>
+      </p>
+      <p>
+        There is also a completely open <a href='http://data.rawfunkmaharishi.uk/'>JSON API</a>, offering data about the band in machine-readable form
       </p>
     </div>
   </div>
