--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@ with_nav: true
      alt='Raw Funk Maharish'
      class='splash center-block visible-xs-inline-block visible-sm-inline-block'/>
 
-<p class='splash pull-right'>
+<p class='splash text-center'>
   {{ site.data.attributes.strapline.standard }}
 </p>
