--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@ with_nav: true
      alt='Raw Funk Maharish'
      class='splash center-block visible-xs-inline-block visible-sm-inline-block'/>
 
-<p class='splash text-center'>
-  {{ site.data.attributes.strapline.standard }}
-</p>
+<div id='strapline'>
+  {% for line in site.data.attributes.straplines %}
+    <p class='splash text-center'>{{ line }}</p>
+  {% endfor %}
+</div>
+
+<script>
+$(function() {
+  var parent = $("#strapline");
+  var divs = parent.children();
+  parent.html(divs.splice(Math.floor(Math.random() * divs.length), 1)[0]);
+})
+</script>
