--- a/merchandise.html
+++ b/merchandise.html
@@ -36,7 +36,7 @@ title: Merchandise
 
   <ul>
     <li>
-      Head over to <a href='http://www.streetshirts.co.uk/en-gb/creation'>Streetshirt</a>
+      Head over to <a href='http://www.streetshirts.co.uk/en-gb/creation'>Streetshirts</a>
     </li>
     <li>
       Select 'Upload image' down the left-hand side
@@ -62,6 +62,6 @@ title: Merchandise
     If you do create some merch of your own, <em>please</em> send us a photo of you wearing it
   </p>
   <p>
-    Also, please note that we are not affiliated with Streetshirt in any way, we've just been extremely impressed with their rapid delivery of high-quality t-shirts
+    Also, please note that we are not affiliated with Streetshirts in any way, we've just been extremely impressed with their rapid delivery of high-quality t-shirts
   </p>
 </article>
