--- a/sounds.html
+++ b/sounds.html
@@ -2,6 +2,8 @@
 title: Sounds
 ---
 
+{% include takatsuka.html %}
+
 <script src="http://connect.soundcloud.com/sdk.js"></script>
 <script>
   SC.initialize({
