--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ with_nav: true
 ---
 
 {% include next-gig-flash.html %}
+{% include new-album-flash.html %}
 
 <img src='/assets/images/logos/wide/banner.png'
      alt='Raw Funk Maharish'
