--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ trim_class: plain
 with_nav: true
 ---
 
+{% include new-album-flash.html %}
 {% include next-gig-flash.html %}
 
 <img src='/assets/images/logos/wide/banner.png'
