Note about Purdie
Closes #74

--- a/licensing.html
+++ b/licensing.html
@@ -5,7 +5,13 @@ no_title: true
 <section>
   <h1 class='main-title'>Open Content</h1>
   <p>
-    All creative works on this site, including <a href='/sounds'>audio</a>, <a href='/videos'>video</a>, <a href='/pictures'>photos</a>, <a href='/merchandise'>logos</a> and <a href='/blog'>blog posts</a> are <a href='https://creativecommons.org/licenses/'>Creative Commons</a>-licensed. This means that you are free to reuse and remix them, subject to the restrictions outlined <a href='https://creativecommons.org/licenses/'>here</a>. See individual pages or items for specific licensing terms
+    All creative works on this site, including <a href='/sounds'>audio</a>,
+    <a href='/videos'>video</a>, <a href='/pictures'>photos</a>,
+    <a href='/merchandise'>logos</a> and <a href='/blog'>blog posts</a> are
+    <a href='https://creativecommons.org/licenses/'>Creative Commons</a>-licensed.
+    This means that you are free to reuse and remix them, subject to the restrictions
+    outlined <a href='https://creativecommons.org/licenses/'>here</a>.
+    See individual pages or items for specific licensing terms
   </p>
 </section>
 
@@ -14,7 +20,14 @@ no_title: true
 <section>
   <h1 class='main-title'>Open Source</h1>
   <p>
-    This site is built using the <a href='http://jekyllrb.com/'>Jekyll</a> framework, and styled with the help of <a href='http://getbootstrap.com/'>Twitter Bootstrap</a>, both of which are <a href='http://opensource.org/licenses/MIT'>MIT-licensed</a>. The entire source is available on <a href='https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io'>Github</a>, also under the <a href='https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io/blob/master/LICENSE.md'>MIT license</a>
+    This site is built using the <a href='http://jekyllrb.com/'>Jekyll</a> framework,
+    and styled with the help of <a href='http://getbootstrap.com/'>Twitter Bootstrap</a>,
+    both of which are <a href='http://opensource.org/licenses/MIT'>MIT-licensed</a>.
+    The media on this site was curated using our own
+    <a href='https://github.com/rawfunkmaharishi/purdie/blob/master/LICENSE.md'>MIT-licensed</a>
+    Rubygem, <a href='http://sam.pikesley.org/projects/purdie/'>Purdie</a>.
+    The entire source is available on <a href='https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io'>Github</a>,
+    also under the <a href='https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io/blob/master/LICENSE.md'>MIT license</a>
   </p>
 </section>
 
@@ -23,7 +36,11 @@ no_title: true
 <section>
   <h1 class='main-title'>Open Maps</h1>
   <p>
-    This site uses maps from <a href='http://www.openstreetmap.org/copyright'>OpenStreetMap</a>, licensed under the <a href='http://opendatacommons.org/licenses/odbl/'>Open Data Commons Open Database License</a> (ODbL) by the  <a href='http://osmfoundation.org/'>OpenStreetMap Foundation</a> (OSMF). The cartography in the <a href='http://stamen.com/'>Stamen</a> map tiles is licensed under the <a href='http://creativecommons.org/licenses/by/3.0/'>Creative Commons Attribution 3.0</a> license (CC BY)
+    This site uses maps from <a href='http://www.openstreetmap.org/copyright'>OpenStreetMap</a>,
+    licensed under the <a href='http://opendatacommons.org/licenses/odbl/'>Open Data Commons
+    Open Database License</a> (ODbL) by the  <a href='http://osmfoundation.org/'>OpenStreetMap Foundation</a> (OSMF).
+    The cartography in the <a href='http://stamen.com/'>Stamen</a> map tiles is licensed under the
+    <a href='http://creativecommons.org/licenses/by/3.0/'>Creative Commons Attribution 3.0</a> license (CC BY)
   </p>
 </section>
 
@@ -37,10 +54,14 @@ no_title: true
     </div>
     <div class='col-md-9'>
       <p>
-        This site <a href='/blog/2015/01/19/linking-data/'>publishes data</a> about Raw Funk Maharishi <a href='/gigs'>gigs</a> as <a href='http://theodi.org/guides/what-open-data'>Open Data</a>. This data is made available under a <a href='http://creativecommons.org/licenses/by-sa/4.0/'>Creative Commons Attribution Share-alike license</a>
+        This site <a href='/blog/2015/01/19/linking-data/'>publishes data</a> about
+        Raw Funk Maharishi <a href='/gigs'>gigs</a> as <a href='http://theodi.org/guides/what-open-data'>Open Data</a>.
+        This data is made available under a
+        <a href='http://creativecommons.org/licenses/by-sa/4.0/'>Creative Commons Attribution Share-alike license</a>
       </p>
       <p>
-        There is also a completely open <a href='http://data.rawfunkmaharishi.uk/'>JSON API</a>, offering data about the band in machine-readable form
+        There is also a completely open <a href='http://data.rawfunkmaharishi.uk/'>JSON API</a>,
+        offering data about the band in machine-readable form
       </p>
     </div>
   </div>
