--- a/qr.html
+++ b/qr.html
@@ -6,7 +6,7 @@ no_title: true
 <div class='row'>
   <div class='col-md-12'>
     <section class='thumbnail'>
-    <img src='http://rawfunkmaharishi.uk/assets/qrcode.svg' alt='QR Code' />
-  </section>
+      <img src='/assets/images/services/qrcode.svg' alt='QR Code' />
+    </section>
   </div>
 </div>
