--- a/snapchat.html
+++ b/snapchat.html
@@ -5,7 +5,7 @@ title: Follow us on Snapchat
 <div class='row'>
   <div class='col-md-12'>
     <section class='thumbnail'>
-      <img src='/assets/snapcode.png' alt='Follow us us on Snapchat' style='height: 200px; width: auto'/>
+      <img src='/assets/images/services/snapcode.png' alt='Follow us us on Snapchat' style='height: 200px; width: auto'/>
     </section>
   </div>
 </div>
