Better album pages

--- a/_albums/takatsuka.html
+++ b/_albums/takatsuka.html
@@ -1,5 +1,17 @@
-takatsuka:
-  outlets:
+---
+title: Takatsuka
+release_date: 2016-04-22
+tracks:
+  - Siren
+  - Blessed Love
+  - Mallets
+  - Made In Hong Kong
+  - Plimsole
+  - Don The Crown
+  - Bernard
+  - Tortoise Stampede
+  
+outlets:
   - name: YouTube
     url: https://www.youtube.com/watch?v=FLB8vJXf71E&list=PLuPLM2FI60-PMPgbLKOazfWSvfa-ZLIzC
   - name: Spotify
@@ -10,3 +22,4 @@ takatsuka:
     url: https://www.amazon.co.uk/gp/product/B01CH4A5ZG
   - name: Sainsbury's
     url: http://www.sainsburysentertainment.co.uk/music/Raw-Funk-Maharishi/Takatsuka/MUS-REL-0005192553
+---
