--- a/sounds.html
+++ b/sounds.html
@@ -2,7 +2,9 @@
 title: Sounds
 ---
 
-{% include takatsuka.html %}
+<p class='albumlink'>
+  Check out our first album, <a href='/albums/takatsuka'>Takatsuka</a>, or enjoy these rehearsal recordings
+</p>
 
 <script src="http://connect.soundcloud.com/sdk.js"></script>
 <script>
