--- a/_albums/takatsuka.html
+++ b/_albums/takatsuka.html
@@ -1,5 +1,6 @@
 ---
 title: Takatsuka
+cover_image: takatsuka.jpg
 release_date: 2016-04-22
 tracks:
   - Siren
@@ -10,7 +11,7 @@ tracks:
   - Don The Crown
   - Bernard
   - Tortoise Stampede
-  
+
 outlets:
   - name: YouTube
     url: https://www.youtube.com/watch?v=FLB8vJXf71E&list=PLuPLM2FI60-PMPgbLKOazfWSvfa-ZLIzC
