--- a/gig-map.html
+++ b/gig-map.html
@@ -13,18 +13,8 @@ title: Every gig we've ever played
     10
   );
 
-  L.tileLayer('//stamen-tiles-{s}.a.ssl.fastly.net/watercolor/{z}/{x}/{y}.png', {
-    subdomains: 'abcd',
-    minZoom: 1,
-    maxZoom: 20,
-  }).addTo(map)
-
-  L.tileLayer('//stamen-tiles-{s}.a.ssl.fastly.net/toner-labels/{z}/{x}/{y}.png', {
-    attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> | Map data &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
-    subdomains: 'abcd',
-    minZoom: 1,
-    maxZoom: 20
-  }).addTo(map)
+  L.tileLayer.provider('Stamen.Watercolor').addTo(map)
+  L.tileLayer.provider('Stamen.TonerLabels').addTo(map)
 
   $.ajax({
     headers: {
