--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ with_nav: true
 {% include next-gig-flash.html %}
 
 <div class='splash center-block hidden-xs hidden-sm'>
-  {% include_relative assets/images/logos/wide/banner.svg %}
+  {% include logos/wide/banner.svg %}
 </div>
 
 <div class='splash center-block visible-xs-inline-block visible-sm-inline-block'>
-  {% include_relative assets/images/logos/stacked/banner.svg %}
+  {% include logos/square/banner.svg %}
 </div>
