--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Raw Funk Maharishi
-extra_styles: "body { background-image: url('https://www.goodfreephotos.com/albums/sky-and-clouds/above-the-sea-of-clouds.jpg'); background-position: center }"
+extra_styles: "body { background-image: url(/assets/images/backgrounds/background.jpg); background-position: center }"
 no_header: true
 no_title: true
 trim_class: plain
