--- a/index.html
+++ b/index.html
@@ -1,21 +1,14 @@
 ---
-layout: default
-title: Raw Funk Maharishi
-extra_styles: "body { background-image: url('/assets/images/backgrounds/background.jpg'); background-position: center }"
-no_header: true
-no_title: true
-trim_class: plain
-with_nav: true
+layout: naked
+title: Coming soon...
 ---
 
-{% include next-gig-flash.html %}
+<div class='visible-xs' id='shim'></div>
 
-<img src='/assets/images/logos/wide/banner.png'
-     alt='Raw Funk Maharish'
-     class='splash center-block hidden-xs hidden-sm'/>
-
-<img src='/assets/images/logos/stacked/logo.png'
-     alt='Raw Funk Maharish'
-     class='splash center-block visible-xs-inline-block visible-sm-inline-block'/>
-
-{% include straplines.html %}
+<div class="embed-responsive embed-responsive-16by9" id="video">
+  <iframe
+    class='embed-responsive-item rounded mx-auto d-block img-fluid'
+    src='//player.vimeo.com/video/263931354?autoplay=1&title=0&byline=0&portrait=0'
+    data-html='true'
+    allowfullscreen></iframe>
+</div>
